SFUSA/force-app/main/default/objects/GBS_Sharing_Exception__mdt/fields/Primary_Category__c.field-meta.xml
<CustomField>
        <fullName>Primary_Category__c</fullName>
        <description>Primary category of the Case.</description>
        <label>Primary Category</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>